(^) Resource 新增 ImageNone

--- a/Hanbo.Resources/Resource.resx
+++ b/Hanbo.Resources/Resource.resx
@@ -117,8 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Message_DependencyNotExists" xml:space="preserve">
-    <value>點成圓幾何相依物件不存在 (Dependency objects does not exists)</value>
+  <data name="Button_Cancel" xml:space="preserve">
+    <value>取消自動 (Cancel)</value>
   </data>
   <data name="Message_CameraAutoConnectNotice" xml:space="preserve">
     <value>尚未連接至影像裝置，是否連線？
@@ -136,9 +136,6 @@
   </data>
   <data name="YAxis" xml:space="preserve">
     <value>Y</value>
-  </data>
-  <data name="_3pointCircle_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\3pointCircle_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -158,6 +155,9 @@
   </data>
   <data name="crossPoint" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\crossPoint.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Message_NoImage" xml:space="preserve">
+    <value>無影像 ( No image)</value>
   </data>
   <data name="DoLoginMessage" xml:space="preserve">
     <value>帳號/密碼不正確 or 帳號停用
@@ -189,10 +189,6 @@ Account / Password uncorrect or Accout disabled.</value>
     <value>訓練影像為空，請重新載入訓練影像
 ( Training image is empty, reload it )</value>
   </data>
-  <data name="Message_PlanSaveAsSuccessedReloadItNotice" xml:space="preserve">
-    <value>已另存程式，是否開啟該程式？
-(  Planning saved. Re-open it ? )</value>
-  </data>
   <data name="draw_circle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\draw_circle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -200,11 +196,17 @@ Account / Password uncorrect or Accout disabled.</value>
     <value>程式已存在，是否覆蓋？
 ( Plan exists , overwrite ? )</value>
   </data>
+  <data name="distanceY" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\distanceY.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="distanceX_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\distanceX_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Message_SymmetryLineWarning" xml:space="preserve">
     <value>兩線段才可以計算對稱中線 (Only two line can calculate the symmetry line)</value>
+  </data>
+  <data name="Message_MeasurementError" xml:space="preserve">
+    <value>測量時發生錯誤 ( Measurement Error ! )</value>
   </data>
   <data name="draw_point_blue32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\draw_point_blue32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -230,9 +232,6 @@ Account / Password uncorrect or Accout disabled.</value>
 有其他量測項目相依於此項目，確定刪除將會失去其他的量測結果
 Warning !
 Some other measurement are depend on this item, if remove it will lose the dependent measurement.</value>
-  </data>
-  <data name="Model_CrossPoint" xml:space="preserve">
-    <value>交點</value>
   </data>
   <data name="clearList_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\clearList_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -286,14 +285,17 @@ Some other measurement are depend on this item, if remove it will lose the depen
 請按下一步繼續
 ( Model created, press next step button to continue)</value>
   </data>
-  <data name="ImageZoom" xml:space="preserve">
-    <value>Zoom</value>
+  <data name="coordinateXY_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\coordinateXY_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="draw_line" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\draw_line.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Message_ImportFormatError" xml:space="preserve">
     <value>檔案格式錯誤，無法匯入 ( File format error )</value>
+  </data>
+  <data name="Message_DependencyNotExists" xml:space="preserve">
+    <value>點成圓幾何相依物件不存在 (Dependency objects does not exists)</value>
   </data>
   <data name="Model_SymmetryLine" xml:space="preserve">
     <value>對稱中線</value>
@@ -312,6 +314,9 @@ Some other measurement are depend on this item, if remove it will lose the depen
     <value>裝置名稱 ( Device)</value>
     <comment>裝置名稱</comment>
   </data>
+  <data name="camera" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\camera.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="zoom_fit_best3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\zoom_fit_best3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -324,12 +329,12 @@ Some other measurement are depend on this item, if remove it will lose the depen
   <data name="Model_Normal" xml:space="preserve">
     <value>標準值 (Normal value)</value>
   </data>
-  <data name="camera" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\camera.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ImageZoom" xml:space="preserve">
+    <value>Zoom</value>
   </data>
-  <data name="Message_CameraIsOccupied" xml:space="preserve">
-    <value>影像裝置資源被其他應用程式佔用，無法開啟
-( Camera is used by other program)</value>
+  <data name="Message_PlanSaveAsSuccessedReloadItNotice" xml:space="preserve">
+    <value>已另存程式，是否開啟該程式？
+(  Planning saved. Re-open it ? )</value>
   </data>
   <data name="Message_DistanceXWarning" xml:space="preserve">
     <value>無法計算 X 方向距離！(Can not calculate the x distance)</value>
@@ -379,8 +384,8 @@ Some other measurement are depend on this item, if remove it will lose the depen
   <data name="ImageMove" xml:space="preserve">
     <value>Move</value>
   </data>
-  <data name="distanceY_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\distanceY_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Model_CrossPoint" xml:space="preserve">
+    <value>交點</value>
   </data>
   <data name="Message_DistanceYWarning" xml:space="preserve">
     <value>無法計算 Y 方向距離！(Can not calculate the y distance)</value>
@@ -388,12 +393,11 @@ Some other measurement are depend on this item, if remove it will lose the depen
   <data name="folder_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\folder_image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Message_MeasurementError" xml:space="preserve">
-    <value>測量時發生錯誤 ( Measurement Error ! )</value>
+  <data name="Message_EmptyPlanningDescNotice" xml:space="preserve">
+    <value>請輸入程式描述 ( Input the planning description )</value>
   </data>
-  <data name="Message_PlanOpendAndReloadNotice" xml:space="preserve">
-    <value>已開啟程式編輯，是否要關閉目前程式並載入？
-( Plan is opend, do you want to close the current plan, and reload the new one ? )</value>
+  <data name="distanceY_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\distanceY_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Message_EmptyExportItemNotice" xml:space="preserve">
     <value>沒有任何量測輸出項目，確定要儲存此程式？
@@ -421,17 +425,20 @@ Some other measurement are depend on this item, if remove it will lose the depen
   <data name="Message_ExportSuccess" xml:space="preserve">
     <value>匯出檔案成功 ( Export success )</value>
   </data>
-  <data name="distanceY" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\distanceY.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Message_Confirm" xml:space="preserve">
+    <value>確認 (Confirm)</value>
   </data>
   <data name="CameraNotReadyMessage" xml:space="preserve">
     <value>影像裝置尚未準備完成 ( Camera is not ready)</value>
   </data>
-  <data name="move" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\move.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="message_attention" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\message_attention.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Message_PlanSaved" xml:space="preserve">
-    <value>程式儲存成功 ( Planning Saved)</value>
+  <data name="zoomLayer_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\zoomLayer_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="angle_blue32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\angle_blue32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Message_LightControllerDisconnectedNotice" xml:space="preserve">
     <value>光源控制器尚未連線，請確認電源及連接網路介面是否正確！
@@ -446,16 +453,12 @@ Some other measurement are depend on this item, if remove it will lose the depen
   <data name="OperationMode" xml:space="preserve">
     <value>Mode</value>
   </data>
-  <data name="Button_Cancel" xml:space="preserve">
-    <value>取消自動 (Cancel)</value>
+  <data name="Message_PlanOpendAndReloadNotice" xml:space="preserve">
+    <value>已開啟程式編輯，是否要關閉目前程式並載入？
+( Plan is opend, do you want to close the current plan, and reload the new one ? )</value>
   </data>
-  <data name="InitSystemDeviceForm_TroubleShootingMessage" xml:space="preserve">
-    <value>系統裝置檢查若發生失敗，請依以下步驟進行故障排除
-If device checking result fail, follow the troubleshooting instructions to fix problem
-
-1。關閉程式 ( Close the program )
-2。重啟光源控制器/CCD 電源 ( Reset power of the light contorller /  CCD )
-3。重新啟動程式 ( Reopen the program )</value>
+  <data name="_3pointCircle_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\3pointCircle_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Message_ImportSuccess" xml:space="preserve">
     <value>匯入成功 ( Import Success )</value>
@@ -463,15 +466,19 @@ If device checking result fail, follow the troubleshooting instructions to fix p
   <data name="zoom_in" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\zoom_in.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="angle_blue32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\angle_blue32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Message_CameraIsOccupied" xml:space="preserve">
+    <value>影像裝置資源被其他應用程式佔用，無法開啟
+( Camera is used by other program)</value>
+  </data>
+  <data name="move" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\move.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Message_UnCreateModelNotice" xml:space="preserve">
     <value>尚未建立模型，請回到 Step1 建立模型
 ( Model uncreated, return to step 1 to carate model )</value>
   </data>
-  <data name="Message_NoImage" xml:space="preserve">
-    <value>無影像 ( No image)</value>
+  <data name="Message_PlanSaved" xml:space="preserve">
+    <value>程式儲存成功 ( Planning Saved)</value>
   </data>
   <data name="ImageManigify" xml:space="preserve">
     <value>Manigify</value>
@@ -482,8 +489,8 @@ If device checking result fail, follow the troubleshooting instructions to fix p
   <data name="grident_22" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\grident_22.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Message_Confirm" xml:space="preserve">
-    <value>確認 (Confirm)</value>
+  <data name="workspace_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\workspace_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TimeConsumed" xml:space="preserve">
     <value>耗時 ( Time consumed )</value>
@@ -494,8 +501,13 @@ If device checking result fail, follow the troubleshooting instructions to fix p
   <data name="angle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\angle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Message_EmptyPlanningDescNotice" xml:space="preserve">
-    <value>請輸入程式描述 ( Input the planning description )</value>
+  <data name="InitSystemDeviceForm_TroubleShootingMessage" xml:space="preserve">
+    <value>系統裝置檢查若發生失敗，請依以下步驟進行故障排除
+If device checking result fail, follow the troubleshooting instructions to fix problem
+
+1。關閉程式 ( Close the program )
+2。重啟光源控制器/CCD 電源 ( Reset power of the light contorller /  CCD )
+3。重新啟動程式 ( Reopen the program )</value>
   </data>
   <data name="Message_PlanDoesNotExistsNotice" xml:space="preserve">
     <value>程式不存在，是否匯入？
@@ -504,13 +516,14 @@ If device checking result fail, follow the troubleshooting instructions to fix p
   <data name="Message_AngleError" xml:space="preserve">
     <value>無法計算角度 (Angle calculate error)</value>
   </data>
-  <data name="coordinateXY_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\coordinateXY_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="disconnect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\disconnect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="workspace_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\workspace_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="connect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\connect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="zoomLayer_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\zoomLayer_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ImageNone" xml:space="preserve">
+    <value>None</value>
+    <comment>操作模式, None</comment>
   </data>
 </root>
